--- a/index.html
+++ b/index.html
@@ -1,1 +1,76 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My portfolio</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <header>
+        <h1>SOFTWARE DEVELOPER</h1>
+        <nav>
+            <ul>
+                <li><a href="aboutme.html">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <br>
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Hi, I'm Obell, a passionate and experienced software developer with a drive to create innovative solutions
+            that make a difference. With a strong foundation in computer science and a keen eye for detail,
+            I've spent years honing my skills in software development,
+            always striving to stay up-to-date with the latest technologies and trends.</p>
+    </section>
+    <section id="projects">
+        <h2>My Projects</h2>
+        <div class="project">
+            <h3>LITSEND</h3>
+            <p></p>
+            <a href="#">View Project</a>
+        </div>
+        <div class="project">
+            <h3>GAMERS HUB</h3>
+            <p>Description</p>
+            <a href="#">View Project</a>
+        </div>
+        <div class="project">
+            <h3>STUDENT MANAGEMENT SYSTEM</h3>
+            <p>Description of project 3.</p>
+            <a href="#">View Project</a>
+        </div>
+    </section>
 
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <form id="contact-form">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" required></textarea>
+            <button type="submit">Send</button>
+        </form>
+    </section>
+
+    <footer>
+        <h2>Connect with Me</h2>
+        <div class="social">
+            <a href="https://github.com/elite realm">GitHub</a>
+            <a href="https://www.linkedin.com/in/elite realm">LinkedIn</a>
+            <a href="https://wa.me/25415873672?text=">WhatsApp</a>
+          </div>
+              
+        <p>&copy; 2025 My portfolio</p>
+    </footer>
+
+    <!-- Scroll to Top Button -->
+  <button id="scrollToTopBtn" class="scroll-to-top">↑</button>
+
+    <script src="index.js"></script>
+</body>
+</html>
