--- a/aboutme.html
+++ b/aboutme.html
@@ -64,15 +64,15 @@
             <h1>Get in Touch</h1>
             <p>If you're looking for a skilled and dedicated software developer who can help you bring your project to life, I'd love to hear from you. Please don't hesitate to get in touch, whether it's to discuss a project, ask a question, or just to say hello.</p>
             <ul>
-                <li>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></li>
-                <li>Phone: <a href="tel:+1234567890">+1234567890</a></li>
-                <li>LinkedIn: <a href="https://www.linkedin.com/in/your-linkedin-profile">your-linkedin-profile</a></li>
-                <li>GitHub: <a href="https://github.com/your-github-profile">your-github-profile</a></li>
+                <li>Email: <a href="mailto:your-email@example.com">moseskimotho20232@gmail.com.com</a></li>
+                <li>Phone: <a href="tel:+1">+254715873672</a></li>
+                <li>LinkedIn: <a href="https://www.linkedin.com/in/elite-realm">your-linkedin-profile</a></li>
+                <li>GitHub: <a href="https://github.com/moses-kimotho">your-github-profile</a></li>
             </ul>
         </section>
     </main>
     <footer>
-        <p>&copy; 2023 [Your Name]. All rights reserved.</p>
+        <p>&copy; 2023 MOSES OBELL All rights reserved.</p>
     </footer>
 </body>
 </html>
